--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.4"
+  },
+  "devDependencies": {
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1"
   }
 }
